# qopt-best-practices

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_annotated_ansatz.py  tmp.ipynb  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
demo/: README.md  requirements.txt  test_installation.ipynb
how_tos/: 00_qaoa_transpilation_ui.ipynb  01_swap_strategies.ipynb  02_sat_initial_mapping.ipynb  03_how_to_select_qubits.ipynb  04_annotated_qaoa_transpilation_details.ipynb  0_how_to_build_qaoa_swap_circuit.ipynb  1_how_to_optimize_qaoa_for_hw.ipynb  2_how_to_run_qaoa_algorithm_on_hw.ipynb  README.md  how_to_add_dynamical_decoupling.ipynb  how_to_apply_optimal_qaoa_transpilation.ipynb  how_to_apply_optimal_qaoa_transpilation_annotated.ipynb  how_to_build_qaoa_swap_circuit.ipynb  how_to_fractional_gates.ipynb  how_to_optimize_qaoa_for_hw.ipynb  how_to_run_custom_cost_functions.ipynb  how_to_select_qubits.ipynb  old_vs_new_transpilation.ipynb  qaoa_transpilation_ui.ipynb  qiskit_patterns.ipynb  test_annotated_ansatz.py  tmp.ipynb  transpilation_best_practices.ipynb
qubit_selection/: backend_evaluator.py  qubit_subset_finders.py
run/: hw_native_test_1_circ.py
sat_mapping/: sat_mapper.py
test/: hw_native_test_1_circ.py  hw_native_test_2_few_iters.py  test_annotated_qaoa_ansatz.py  test_annotated_transpilation.py  test_cost_function.py  test_cost_layer.py  test_dd.py  test_full_workflow.py  test_graph_utils.py  test_prepare_cost_layer.py  test_preset_qaoa_pass_manager.py  test_qaoa_construction.py  (+4 more)
(+65 files in other folders)
